--- a/src/assets/i18n/eng.json
+++ b/src/assets/i18n/eng.json
@@ -26,5 +26,14 @@
                 "Password is required": "Password is required"
             }
         }
+    },
+    "verifyUserComponent": {
+        "component": {
+            "Verify your mail": "Thank you for verifying your email!",
+            "Please click the button below": "To complete the verification process and secure your account, please click the button below.",
+            "Support team": "If you did not request this verification or believe this email was sent in error, please ignore this message or contact our support team for assistance.",
+            "Helping us": "Thank you for helping us keep your account secure!",
+            "Verify your account": "Verify your account"
+        }
     }
 }
